--- a/bower.json
+++ b/bower.json
@@ -16,6 +16,7 @@
     "tests"
   ],
   "dependencies": {
-    "angular-ui-ace": "bower"
+    "angular-ui-ace": "bower",
+    "angular-bootstrap": "~0.12.0"
   }
 }
